[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["audio"]

[project]
name = "wyoming-audio"
version = "0.1.0"
dependencies = [
  "keyboard",
  "pyalsaaudio",
  "pyaudio",
  "python-decouple",
  "astral",
]
requires-python = ">=3.10"
authors = [
  {name = "Elia Giacobazzi", email = "elia.giacobazzi@gmail.com"},
]
maintainers = [
  {name = "Elia Giacobazzi", email = "elia.giacobazzi@gmail.com"},
]
description = "An audio extension for Wyoming Satellite projects"
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = ["black", "isort", "ipython"]

[tool.isort]
profile = "black"
